# Neuron

./: CMakeLists.txt  NeuronC.pc.in
cmake/: NeuronCConfig.cmake
include/: act_func.h  direct_distribution.h  layer.h  neural_network.h
scripts/: install.sh
src/: direct_distribution.cpp  layer.cpp  neural_network.cpp
tests/: CMakeLists.txt
tests/unit/: CMakeLists.txt  distribution_test.cpp  neural_constructor.cpp
